--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="menu-links">
           <li><a href="#about" onclick="toggleMenu()">About</a></li>
-          <li><a href="#skills" onclick="toggleMenu()">Experience</a></li>
+          <li><a href="#skills" onclick="toggleMenu()">Skills</a></li>
           <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
           <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
         </div>
@@ -68,9 +68,9 @@
     <p class="section__text__p1">Get To Know More</p>
     <h1 class="abt-title">ABOUT ME</h1>
     <div class="section-container">
-      <div class="about__pic-container">
+      <!-- <div class="about__pic-container">
         <img src="img/girly2.png" alt="Profile picture" class="about-pic" />
-      </div>
+      </div> -->
       <div class="about__data">
         <p class="about__description"> A budding Frontend Developer with knowledge
           of HTML/CSS/JAVASCRIPT and practical experience on building and replicating
@@ -88,7 +88,7 @@
             <span class="about__info-name">Completed <br> project</span>
           </div>
           <div>
-            <span class="about__info-title">02+</span><br>
+            <span class="about__info-title no2">02+</span><br>
             <span class="about__info-name">Open Source Projects <br> Contributed</span><br><br>
           </div>
         </div>
