font size adjusted

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
   </section>
   <section>
     <div class="contact__section" id="contact">
-      <h2>Contact Me</h2>
+      <h2 class="abt-title">CONTACT ME</h2>
     </div>
     <div class="form__container">
       <form action="/send-email" method="POST">
