--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <header class="l-header">
     <nav class="nav bd-grid">
       <div>
-        <img src="/img/code-chic.jpg" alt="">
+        <a href="#" class="nav__logo">Code-Chic</a>
       </div>
 
       <div class="nav__menu" id="nav-menu">
